syntax = "proto3";

package proto;

service CentreService {
    // 获取所有房间信息
    rpc RoomList(RoomListArgs) returns (RoomListRes){}
    // 更新房间信息
    rpc UpdateRoomInfo(UpdateRoomInfoArgs) returns (BaseRes){}
}

message BaseRes{
    int32 ret = 1;
    string msg = 2;
}

message UpdateRoomInfoArgs{
    string service_id = 1;
    int32 room_id = 2;
    RoomInfo room_info = 3;
}

message RoomListArgs{

}

message RoomListRes{
    map<int32, RoomInfo> list = 1;
}

message RoomInfo{
    int32 table_number = 1;
    int32 player_number = 2;
}