syntax = "proto3";

package proto;


service StsService {
    // 获取游戏信息
    rpc GameInfo(GameInfoArgs) returns (StsRes){}
}
message GameInfoArgs {
    int32 room_id = 1; //房间场类型
    string table_id =2;
    int32 max = 3;
    int32 start =4;
    int32 end = 5;
    repeated CardsInfo cards = 6;
    int32 button=7;
    int32 sb = 8;
    int32 bb = 9;
    int32 sb_pos= 10;
    int32 bb_pos = 11;
    repeated int32 pot =12;
    repeated Player player=13;
}
message CardsInfo{
    int32 suit = 1;
    int32 value =2;
}
message Player {
    int32 id =1;
    string nickname =2;
    string avatar  = 3;
    int32 pos =4;
    int32 bet = 5;
    int32 win =6;
    int32 former_chips = 7;
    int32 current_chips =8;
    string action=9;
    repeated CardsInfo cards = 10;
    int32 hand_level=11;
    int32 hand_final_value =12;
}
message StsRes {
    int32 ret = 1;
    string msg = 2;
}
